--- a/app/src/main/res/layout/footer_component.xml
+++ b/app/src/main/res/layout/footer_component.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="bottom">
+    android:gravity="bottom"
+    android:orientation="vertical">
 
     <!-- tabTextColor : couleur du texte des boutons d'onglet
          tabBackground : couleur de fond des boutons d'onglet
@@ -13,9 +13,9 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/footer_layout"
         style="@style/FooterComponent"
-        app:tabTextColor="@color/footer_icon_inactive"
         app:tabBackground="@color/footer_background"
+        app:tabIndicatorColor="@color/footer_icon_active"
         app:tabSelectedTextColor="@color/footer_icon_active"
-        app:tabIndicatorColor="@color/footer_icon_active" />
+        app:tabTextColor="@color/footer_icon_inactive" />
 
 </LinearLayout>
