--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <item name="footer_icon_home" type="id"/>
-    <item name="footer_icon_client" type="id"/>
-    <item name="footer_icon_parcours" type="id"/>
-    <item name="footer_icon_itineraire" type="id"/>
+    <item name="pied_page_icone_accueil" type="id"/>
+    <item name="pied_page_icone_client" type="id"/>
+    <item name="pied_page_icone_parcours" type="id"/>
+    <item name="pied_page_icone_itineraire" type="id"/>
 </resources>
