--- a/app/src/main/res/layout/activite_connexion.xml
+++ b/app/src/main/res/layout/activite_connexion.xml
@@ -29,7 +29,7 @@
         android:id="@+id/saisieMail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/placeholder_mail"
+        android:hint="@string/indication_email"
         app:layout_constraintTop_toBottomOf="@id/labelMail"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +49,7 @@
         android:id="@+id/saisieMdp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/placeholder_mdp"
+        android:hint="@string/indication_mdp"
         app:layout_constraintTop_toBottomOf="@id/labelMdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +83,7 @@
             android:id="@+id/labelRememberMe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/seSouvenir" />
+            android:text="@string/se_souvenir" />
     </LinearLayout>
 
     <Button
