--- a/app/src/main/res/layout/fragment_clients.xml
+++ b/app/src/main/res/layout/fragment_clients.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".FragmentClients">
+    tools:context=".fragments.FragmentClients">
 
     <LinearLayout
         android:id="@+id/layout_clients"
