--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="footer_icon_active">#00aa44</color>
-    <color name="footer_icon_inactive">#2E2E2E</color>
-    <color name="footer_background">#D9D9D9</color>
+    <color name="pied_page_icone_active">#00aa44</color>
+    <color name="pied_page_icone_inactive">#2E2E2E</color>
+    <color name="pied_page_fond">#D9D9D9</color>
 </resources>
