--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,24 +10,24 @@
     <style name="AppStyle">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">@dimen/app_padding</item>
+        <item name="android:padding">@dimen/app_marge_interieure</item>
     </style>
 
     <style name="FooterComponent">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:minHeight">@dimen/footer_min_height</item>
+        <item name="android:minHeight">@dimen/pied_page_hauteur_min</item>
         <item name="android:gravity">center</item>
         <item name="android:contentDescription">Fragments</item>
-        <item name="android:background">@color/footer_background</item>
+        <item name="android:background">@color/pied_page_fond</item>
     </style>
 
     <style name="FooterImage">
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">@dimen/footer_icon_dimens</item>
+        <item name="android:layout_height">@dimen/pied_page_dimensions_icone</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:paddingVertical">@dimen/footer_icon_padding_y</item>
-        <item name="android:layout_marginHorizontal">@dimen/footer_icon_margin_x</item>
+        <item name="android:paddingVertical">@dimen/pied_page_marge_interieure_verticale_icone</item>
+        <item name="android:layout_marginHorizontal">@dimen/pied_page_marge_interieure_horizontale_icone</item>
         <item name="android:scaleType">centerCrop</item>
         <item name="android:adjustViewBounds">true</item>
     </style>
