Feat: (gestion preference) a la connexion

--- a/app/src/main/res/layout/activite_connexion.xml
+++ b/app/src/main/res/layout/activite_connexion.xml
@@ -75,7 +75,7 @@
         android:layout_marginTop="16dp">
 
         <CheckBox
-            android:id="@+id/rememberMe"
+            android:id="@+id/seRappelerDeMoi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
