--- a/app/src/main/res/layout/activite_inscription.xml
+++ b/app/src/main/res/layout/activite_inscription.xml
@@ -35,16 +35,27 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/nom" />
+            <TextView
+                android:id="@+id/messageErreurNom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="" />
 
             <EditText
+                android:id="@+id/saisieNom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/indication_nom" />
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="37dp"
+                android:layout_height="wrap_content"
                 android:text="@string/mail" />
+            <TextView
+                android:id="@+id/messageErreurMail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="" />
 
             <EditText
                 android:id="@+id/saisieMail"
@@ -53,11 +64,18 @@
                 android:hint="@string/indication_email" />
 
             <TextView
+                android:id="@+id/messageErreurAdresse"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="37dp"
                 android:text="@string/adresse" />
 
             <EditText
+                android:id="@+id/saisieAdresse"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/indication_adresse" />
@@ -73,8 +91,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/prenom" />
+            <TextView
+                android:id="@+id/messageErreurPrenom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="" />
+
 
             <EditText
+                android:id="@+id/saisiePrenom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/indication_prenom" />
@@ -83,7 +108,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/mdp" />
-
+            <TextView
+                android:id="@+id/messageErreurMdp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="" />
             <EditText
                 android:id="@+id/saisieMdp"
                 android:layout_width="match_parent"
@@ -94,25 +123,42 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/ville" />
+            <TextView
+                android:id="@+id/messageErreurVille"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="" />
 
             <EditText
+                android:id="@+id/saisieVille"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/indication_ville" />
         </LinearLayout>
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/messageErreur"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        app:layout_constraintTop_toBottomOf="@id/formulaireInsription"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp" />
+
     <LinearLayout
+
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/formulaireInsription"
+        app:layout_constraintTop_toBottomOf="@id/messageErreur"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp">
 
         <CheckBox
-            android:id="@+id/rememberMe"
+            android:id="@+id/seRappelerDeMoi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
