--- a/app/src/main/res/layout/fragment_accueil.xml
+++ b/app/src/main/res/layout/fragment_accueil.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".fragments.FragmentAccueil">
 
     <LinearLayout
@@ -26,6 +26,14 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:background="#0000FF" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="555dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text=""
+            android:textSize="50sp" />
 
     </LinearLayout>
 
