--- a/app/src/main/res/xml/configuration_securite_reseau.xml
+++ b/app/src/main/res/xml/configuration_securite_reseau.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
     <network-security-config>
         <domain-config cleartextTrafficPermitted="true">
-            <domain includeSubdomains="true">10.0.2.2</domain>
-            <domain includeSubdomains="true">13.39.108.121</domain>
+            <domain includeSubdomains="true">10.0.2.2</domain> <!-- local -->
+            <domain includeSubdomains="true">13.60.71.41</domain> <!-- serveur "BD" (servant de serveur API temporairement) -->
+            <domain includeSubdomains="true">13.39.108.121</domain> <!-- serveur "API" -->
         </domain-config>
     </network-security-config>
