--- a/app/src/main/res/layout/fragment_itineraires.xml
+++ b/app/src/main/res/layout/fragment_itineraires.xml
@@ -1,32 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".fragments.FragmentItineraires">
 
-    <LinearLayout
-        android:id="@+id/layout_itineraires"
-        android:orientation="vertical"
+    <Button
+        android:id="@+id/boutonAjoutItineraire"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:text="@string/ajouter_itineraire"
+        app:layout_constraintBaseline_toTopOf="parent" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:text="Itinéraires (TODO page)"
-            android:textSize="50sp" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_itineraires"
+        android:layout_width="match_parent"
+        android:layout_marginTop="45dp"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/boutonAjoutItineraire" />
 
-        <View
-            android:layout_width="fill_parent"
-            android:layout_height="2dip"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"
-            android:background="#0000FF" />
-
-    </LinearLayout>
-
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
