--- a/app/src/main/res/layout/activite_inscription.xml
+++ b/app/src/main/res/layout/activite_inscription.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    style="@style/AppStyle">
 
     <TextView
         android:id="@+id/textViewInscription"
@@ -39,12 +38,14 @@
                 android:id="@+id/messageErreurNom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:text="" />
 
             <EditText
                 android:id="@+id/saisieNom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
                 android:hint="@string/indication_nom" />
 
             <TextView
@@ -55,24 +56,26 @@
                 android:id="@+id/messageErreurMail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:text="" />
 
             <EditText
                 android:id="@+id/saisieMail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
                 android:hint="@string/indication_email" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/adresse" />
             <TextView
                 android:id="@+id/messageErreurAdresse"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:text="" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="37dp"
-                android:text="@string/adresse" />
 
             <EditText
                 android:id="@+id/saisieAdresse"
@@ -95,13 +98,14 @@
                 android:id="@+id/messageErreurPrenom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:text="" />
-
 
             <EditText
                 android:id="@+id/saisiePrenom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
                 android:hint="@string/indication_prenom" />
 
             <TextView
@@ -112,28 +116,14 @@
                 android:id="@+id/messageErreurMdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:text="" />
             <EditText
                 android:id="@+id/saisieMdp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
                 android:hint="@string/indication_mdp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/ville" />
-            <TextView
-                android:id="@+id/messageErreurVille"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="" />
-
-            <EditText
-                android:id="@+id/saisieVille"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/indication_ville" />
         </LinearLayout>
     </LinearLayout>
 
@@ -141,6 +131,7 @@
         android:id="@+id/messageErreur"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:text=""
         app:layout_constraintTop_toBottomOf="@id/formulaireInsription"
         app:layout_constraintStart_toStartOf="parent"
@@ -148,14 +139,12 @@
         android:layout_marginTop="16dp" />
 
     <LinearLayout
-
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        app:layout_goneMarginTop="15dp"
         app:layout_constraintTop_toBottomOf="@id/messageErreur"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp">
+        app:layout_constraintStart_toStartOf="parent">
 
         <CheckBox
             android:id="@+id/seRappelerDeMoi"
@@ -176,20 +165,30 @@
         app:layout_constraintTop_toBottomOf="@id/messageErreur"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="50dp">
+        android:layout_marginTop="75dp">
 
         <Button
-            android:id="@+id/obtenirCoordonnees"
+            android:id="@+id/boutonObtenirCoordonnees"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="obtenirCoordonnees"
             android:layout_marginBottom="304dp"
-            android:text="@string/obtenircoordonnees" />
+            android:layout_marginRight="50dp"
+            android:onClick="obtenirCoordonnees"
+            android:enabled="false"
+            android:text="@string/obtenir_coordonnees" />
+        <Button
+            android:id="@+id/boutonEditerAdresse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="304dp"
+            android:layout_marginRight="50dp"
+            android:text="@string/editer_adresse" />
         <Button
             android:id="@+id/boutonInscription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="304dp"
+            android:enabled="false"
             android:text="@string/inscription" />
     </LinearLayout>
 
