--- a/app/src/main/res/layout/pied_page_composant.xml
+++ b/app/src/main/res/layout/pied_page_composant.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="bottom"
+    android:layout_height="@dimen/pied_page_hauteur_min"
     android:orientation="vertical">
 
     <!-- tabTextColor : couleur du texte des boutons d'onglet
@@ -12,7 +11,12 @@
          tabIndicatorColor : couleur trait qui souligne nom bouton onglet actif -->
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/footer_layout"
-        style="@style/FooterComponent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        android:contentDescription="Fragments"
+        android:background="@color/pied_page_fond"
+        android:paddingBottom="@dimen/pied_page_icone_padding_bas"
         app:tabBackground="@color/pied_page_fond"
         app:tabIndicatorColor="@color/pied_page_icone_active"
         app:tabSelectedTextColor="@color/pied_page_icone_active"
