--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="pied_page_marge_interieure_horizontale_icone">30dp</dimen>
+    <dimen name="app_marge_interieure">30dp</dimen>
+
+    <dimen name="pied_page_hauteur_min">70dp</dimen>
+    <dimen name="pied_page_icone_padding_haut">15dp</dimen>
+    <dimen name="pied_page_icone_espace_barre">12dp</dimen>
+    <dimen name="pied_page_icone_padding_bas">9dp</dimen>
+    <dimen name="pied_page_icone_marge_exterieure_horizontale">30dp</dimen>
+    <dimen name="pied_page_icone_dimensions">68dp</dimen>
 </resources>
