--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="ic_launcher_background">#FFFFFF</color>
-    <color name="black">#000000</color>
 
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#1981FF</color>
+    <color name="colorPrimaryDark">#1A6ED5</color>
+    <color name="colorAccent">#FF6262</color>
+
+    <color name="black">#000000</color>
 
     <color name="pied_page_icone_active">#00aa44</color>
     <color name="pied_page_icone_inactive">#2E2E2E</color>
