--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.CliAndCollect" parent="Theme.Material3.DayNight">
-        <!-- Customize your light theme here. -->
+    <style name="Base.Theme.CliAndCollect" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:statusBarColor">@color/colorPrimaryDark</item> <!-- Couleur status réseau, app, heure android -->
+        <item name="colorPrimary">@color/colorPrimary</item> <!-- Couleur principale de l'application -->
     </style>
 
     <style name="Theme.CliAndCollect" parent="Base.Theme.CliAndCollect" />
