--- a/app/src/main/res/layout/detail_client.xml
+++ b/app/src/main/res/layout/detail_client.xml
@@ -62,6 +62,16 @@
                 android:layout_width="match_parent"
                 android:inputType="textMultiLine"
                 android:layout_height="wrap_content" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/coordonnees" />
+
+            <TextView
+                android:id="@+id/coordonnees"
+                android:layout_width="match_parent"
+                android:inputType="textMultiLine"
+                android:layout_height="wrap_content" />
         </LinearLayout>
 
         <LinearLayout
@@ -90,8 +100,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/tel_contact" />
+
+            <EditText
+                android:id="@+id/telephone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
             <RadioGroup
                 android:layout_width="match_parent"
+                android:id="@+id/ClientProspect"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <RadioButton
@@ -118,17 +139,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp">
         <Button
-            android:id="@+id/boutonValider"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="304dp"
-            android:text="@string/valider" />
-        <Button
             android:id="@+id/boutonRetour"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="304dp"
             android:text="@string/retour" />
+        <Button
+            android:id="@+id/obtenirCoordonnees"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="obtenirCoordonnees"
+            android:layout_marginBottom="304dp"
+            android:text="@string/obtenir_coordonnees" />
+        <Button
+            android:id="@+id/boutonModifier"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="304dp"
+            android:text="@string/valider" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
