--- a/app/src/main/res/drawable/account_circle.xml
+++ b/app/src/main/res/drawable/account_circle.xml
@@ -6,7 +6,7 @@
 
     <!-- Grand cercle extérieur -->
     <path
-        android:fillColor="#072C51"
+        android:fillColor="@color/dark_blue"
         android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10s10,-4.48 10,-10S17.52,2 12,2z" />
 
     <!-- Visage (rempli en blanc) -->
