--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,8 @@
 <resources>
     <dimen name="app_marge_interieure">15dp</dimen>
 
+    <dimen name="carte_marges">16dp</dimen>
+
     <dimen name="pied_page_hauteur_min">60dp</dimen>
     <dimen name="pied_page_icone_padding_haut">12dp</dimen>
     <dimen name="pied_page_icone_espace_barre">12dp</dimen>
