--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,21 @@
     <style name="Base.Theme.CliAndCollect" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/colorPrimaryDark</item> <!-- Couleur status réseau, app, heure android -->
         <item name="colorPrimary">@color/colorPrimary</item> <!-- Couleur principale de l'application -->
+
+        <!-- Style des boutons globalement -->
+        <item name="android:buttonStyle">@style/ButtonStyle</item>
     </style>
 
     <style name="Theme.CliAndCollect" parent="Base.Theme.CliAndCollect" />
+
+    <!-- Définition du style des boutons -->
+    <style name="ButtonStyle">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/boutons_custom</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:elevation">4dp</item>
+    </style>
 </resources>
