--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="colorPrimaryDark">#1A6ED5</color>
 
     <color name="black">#000000</color>
+    <color name="light_grey">#ECECEC</color>
+    <color name="dark_grey">#B1B1B1</color>
     <color name="dark_blue">#072C51</color>
 
     <color name="bouton_secondaire">#DADADA</color>
