--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="app_marge_interieure">30dp</dimen>
+    <dimen name="texte_defaut">18sp</dimen>
+
+    <dimen name="connexion_largeur_champs">400dp</dimen>
+    <dimen name="connexion_taille_titres">25sp</dimen>
+    <dimen name="connexion_taille_texte_boutons">22sp</dimen>
+    <dimen name="connexion_largeur_boutons">175dp</dimen>
+    <dimen name="connexion_marge_verticale_champs_texte">14dp</dimen>
+    <dimen name="connexion_marge_verticale_autre">20dp</dimen>
 
     <dimen name="pied_page_hauteur_min">70dp</dimen>
     <dimen name="pied_page_icone_padding_haut">15dp</dimen>
